<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414141"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/book_Price"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/Price"
        android:inputType="textPersonName"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A39F9F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_Release" />

    <EditText
        android:id="@+id/book_id"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/Id"
        android:inputType="textPersonName"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A39F9F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/book_Release"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/Release"
        android:inputType="textPersonName"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A39F9F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_Name" />

    <EditText
        android:id="@+id/book_Name"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A39F9F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_id" />

    <Button
        android:id="@+id/book_Save"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_Price" />

    <Button
        android:id="@+id/book_Update"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/Update"
        android:textColor="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_Save" />

    <TextView
        android:id="@+id/book_Delete"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="243dp"
        android:layout_marginRight="243dp"
        android:text="@string/Delete"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/book_Load"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_Load"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/Load"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>